--- a/codeup-design-bootstrap.html
+++ b/codeup-design-bootstrap.html
@@ -11,11 +11,11 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="panel panel-default"></div>
-        <div class="col-xs-12">
-            <img src="img/logo.jpg" class="center-block img-responsive">
-        </div>
+        <div class="col-xs-12">jjjj
+            <img src="img/logo.png" class="center-block img-responsive">
+
     </div>
+</div>
 </div>
 
 
