added .logo and .logo-image

--- a/codeup-design-bootstrap.html
+++ b/codeup-design-bootstrap.html
@@ -11,27 +11,21 @@
 
 <div class="container-fluid">
     <div class="row">
-<<<<<<< HEAD
-        <div class="col-xs-12">jjjj
-            <img src="img/logo.png" class="center-block img-responsive">
-
-=======
-
-        <div class="col-xs-12">lkahjt;lehj;j
-            <img src="img/logo.png" class="center-block img-responsive">
+        <div class="col-xs-12 logo">
+            <img src="img/logo.png" class="center-block img-responsive logo-image">
         </div>
->>>>>>> 00a72c8e56036722880cc91c83ec4860e80e14ca
+    </div>
+    <div class="row">
+        <h1 class="text-center page-header">codeup design </h1>
+
     </div>
 </div>
-</div>
-
-
 
 
 <script
-  src="https://code.jquery.com/jquery-3.2.1.min.js"
-  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-  crossorigin="anonymous"></script>
+        src="https://code.jquery.com/jquery-3.2.1.min.js"
+        integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+        crossorigin="anonymous"></script>
 
 <script src="js/bootstrap.min.js"></script>
 
