Added center text, attempted to create nav bars.

--- a/codeup-design-bootstrap.html
+++ b/codeup-design-bootstrap.html
@@ -11,13 +11,30 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col-xs-12 logo">
+        <div class="col-xs-12 w-box logo">
             <img src="img/logo.png" class="center-block img-responsive logo-image">
         </div>
     </div>
     <div class="row">
-        <h1 class="text-center page-header">codeup design </h1>
+        <h1 class="text-center page-header center-font">codeup design </h1>
+    </div>
+    <div class="row">
+        <nav class="navbar text-center">
+    <div class="col-xs-3">
+        SERVICES
+    </div>
+        <div class="col-xs-3">
+            WORK
+        </div>
+        <div class="'col-xs-3">
+            BLOG
+        </div>
+        <div class='col-xs-3'>
+            CONTACT
+        </div>
 
+        </nav>
+    </div>
     </div>
 </div>
 
