--- a/codeup-design-bootstrap.html
+++ b/codeup-design-bootstrap.html
@@ -20,21 +20,34 @@
     </div>
     <div class="row">
         <nav class="navbar text-center">
-    <div class="col-xs-3">
-        SERVICES
-    </div>
-        <div class="col-xs-3">
-            WORK
-        </div>
-        <div class="'col-xs-3">
-            BLOG
-        </div>
-        <div class='col-xs-3'>
-            CONTACT
-        </div>
+            <ul>
+                <li>SERVICES</li>
+                <li>WORK</li>
+                <li>BLOG</li>
+                <li>CONTACT</li>
+            </ul>
 
         </nav>
     </div>
+    <div class="row">
+        <div class="col-sm-12">
+            <h1 class="text-center body-heading"><strong>VISUAL DESIGN & WEB DEVELOPMENT</strong></h1>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-12">
+            <h1 class="text-center body-heading-2"><strong>FROM PARK CITY, UTAH</strong></h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-6">
+
+        </div>
+        <div class="col-sm-6>">
+
+        </div>
+
     </div>
 </div>
 
