Created circle class and half xs col.

--- a/codeup-design-bootstrap.html
+++ b/codeup-design-bootstrap.html
@@ -30,21 +30,24 @@
         </nav>
     </div>
     <div class="row">
-        <div class="col-sm-12">
+        <div class="col-xs-12">
             <h1 class="text-center body-heading"><strong>VISUAL DESIGN & WEB DEVELOPMENT</strong></h1>
         </div>
     </div>
 
     <div class="row">
-        <div class="col-sm-12">
+        <div class="col-xs-12">
             <h1 class="text-center body-heading-2"><strong>FROM PARK CITY, UTAH</strong></h1>
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-6">
+        <div class="col-xs-6">
+        <div class="circle img-responsive">
 
         </div>
-        <div class="col-sm-6>">
+        </div>
+        <div class="col-xs-6">
+            <div class="circle img-responsive">
 
         </div>
 
