needs more work

--- a/codeup-design-bootstrap.html
+++ b/codeup-design-bootstrap.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<div class="container-fluid">
+<div class="container">
     <div class="row">
         <div class="col-xs-12 w-box logo">
             <img src="img/logo.png" class="center-block img-responsive logo-image">
@@ -42,25 +42,27 @@
     </div>
     <div class="row">
         <div class="col-xs-6">
-        <div class="circle img-responsive">
+            <div class="circle circle-1 img-responsive">
 
-        </div>
+            </div>
+
         </div>
         <div class="col-xs-6">
-            <div class="circle img-responsive">
+            <div class="circle circle-2 img-responsive">
+
+            </div>
 
         </div>
-
     </div>
 </div>
 
 
-<script
-        src="https://code.jquery.com/jquery-3.2.1.min.js"
-        integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-        crossorigin="anonymous"></script>
+    <script
+            src="https://code.jquery.com/jquery-3.2.1.min.js"
+            integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+            crossorigin="anonymous"></script>
 
-<script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 
 </body>
 </html>
