my comp is dying did up to selected work

--- a/codeup-design-bootstrap.html
+++ b/codeup-design-bootstrap.html
@@ -16,7 +16,7 @@
         </div>
     </div>
     <div class="row">
-        <h1 class="text-center page-header center-font">codeup design </h1>
+        <h1 class="text-center page-header center-font">codeup design</h1>
     </div>
     <div class="row">
         <nav class="navbar text-center">
@@ -37,21 +37,53 @@
 
     <div class="row">
         <div class="col-xs-12">
-            <h1 class="text-center body-heading-2"><strong>FROM PARK CITY, UTAH</strong></h1>
+            <h1 class="text-center body-heading-two"><strong>FROM PARK CITY, UTAH</strong></h1>
         </div>
     </div>
     <div class="row">
         <div class="col-xs-6">
-            <div class="circle circle-1 img-responsive">
+        <div id="red-circle">
 
+            <div class="circle img-responsive down" id="red">
+            </div>
             </div>
 
         </div>
-        <div class="col-xs-6">
-            <div class="circle circle-2 img-responsive">
 
+        <div class="col-xs-6">
+            <div id="orange-circle">
+            <div class="circle img-responsive" id="orange">
+            </div>
             </div>
 
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-6">
+            <div id="green-circle">
+                <div class="circle img-responsive" id="green">
+
+                </div>
+            </div>
+
+        </div>
+
+        <div class="col-xs-6">
+            <div id="turquoise-circle">
+                <div class="circle img-responsive" id="turquoise">
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xm-12">
+        <h2 class="text-center text-center-footer">SELECTED WORK</h2>
+    </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-12">
+            <img src="img/apple-ipad.jpg" class="img-responsive">
         </div>
     </div>
 </div>
