finished responsive mobile extra small

--- a/codeup-design-bootstrap.html
+++ b/codeup-design-bootstrap.html
@@ -45,6 +45,7 @@
         <div id="red-circle">
 
             <div class="circle img-responsive down" id="red">
+                <h2 class="h2-center text-center">DESIGN</h2>
             </div>
             </div>
 
@@ -53,6 +54,7 @@
         <div class="col-xs-6">
             <div id="orange-circle">
             <div class="circle img-responsive" id="orange">
+                <h2 class="h2-center text-center">DEVELOP</h2>
             </div>
             </div>
 
@@ -62,6 +64,7 @@
         <div class="col-xs-6">
             <div id="green-circle">
                 <div class="circle img-responsive" id="green">
+                    <h2 class="h2-center text-center">SUPPORT</h2>
 
                 </div>
             </div>
@@ -71,6 +74,7 @@
         <div class="col-xs-6">
             <div id="turquoise-circle">
                 <div class="circle img-responsive" id="turquoise">
+                    <h2 class="h2-center text-center">HOST</h2>
                 </div>
             </div>
 
@@ -83,8 +87,33 @@
     </div>
     <div class="row">
         <div class="col-xs-12">
-            <img src="img/apple-ipad.jpg" class="img-responsive">
+            <img src="img/apple-ipad.jpg" class="img-responsive img-border-rounded">
         </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-6">
+            <h2 class="h2-text-right text-right">
+                FEATURED PROJECT
+            </h2>
+
+        </div>
+
+        <div class="col-xs-6 circles-right">
+            <div class="small-circles" id="red">
+               <h4 class="text-center bottom-circles"><strong>D</strong></h4>
+            </div>
+            <div class="small-circles" id="orange">
+                <h4 class="text-center bottom-circles"><strong>D</strong></h4>
+            </div>
+            <div class="small-circles" id="green">
+                <h4 class="text-center bottom-circles"><strong>S</strong></h4>
+            </div>
+            <div class="small-circles" id="turquoise">
+                <h4 class="text-center bottom-circles"><strong>H</strong></h4>
+            </div>
+
+        </div>
+
     </div>
 </div>
 
