--- a/codeup-design-bootstrap.html
+++ b/codeup-design-bootstrap.html
@@ -11,32 +11,49 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-xs-12 w-box logo">
+        <div class="col-xs-12 col-sm-12 w-box logo">
+                <nav class="navbar text-center hidden-xs">
+                    <ul class="top-menu">
+                        <li>SERVICES</li>
+                        <li>WORK</li>
+                        <li>BLOG</li>
+                        <li>CONTACT</li>
+                    </ul>
+                </nav>
             <img src="img/logo.png" class="center-block img-responsive logo-image">
         </div>
     </div>
     <div class="row">
         <h1 class="text-center page-header center-font">codeup design</h1>
     </div>
-    <div class="row">
-        <nav class="navbar text-center">
+    <div class="row navbar-xs">
+        <nav class="navbar-xs text-center">
             <ul>
                 <li>SERVICES</li>
                 <li>WORK</li>
                 <li>BLOG</li>
                 <li>CONTACT</li>
             </ul>
-
         </nav>
     </div>
     <div class="row">
-        <div class="col-xs-12">
+        <nav class="navbar text-center hidden-xs">
+            <ul class="top-menu">
+                <li>SERVICES</li>
+                <li>WORK</li>
+                <li>BLOG</li>
+                <li>CONTACT</li>
+            </ul>
+        </nav>
+    </div>
+    <div class="row">
+        <div class="col-xs-12 col-sm-12">
             <h1 class="text-center body-heading"><strong>VISUAL DESIGN & WEB DEVELOPMENT</strong></h1>
         </div>
     </div>
 
     <div class="row">
-        <div class="col-xs-12">
+        <div class="col-xs-12 col-sm-12">
             <h1 class="text-center body-heading-two"><strong>FROM PARK CITY, UTAH</strong></h1>
         </div>
     </div>
@@ -81,12 +98,12 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-xm-12">
+        <div class="col-xm-12 col-sm-12">
         <h2 class="text-center text-center-footer">SELECTED WORK</h2>
     </div>
     </div>
     <div class="row">
-        <div class="col-xs-12">
+        <div class="col-xs-12 col-sm-12">
             <img src="img/apple-ipad.jpg" class="img-responsive img-border-rounded">
         </div>
     </div>
@@ -99,16 +116,16 @@
         </div>
 
         <div class="col-xs-6 circles-right">
-            <div class="small-circles" id="red">
+            <div class="small-circles" id="red-small">
                <h4 class="text-center bottom-circles"><strong>D</strong></h4>
             </div>
-            <div class="small-circles" id="orange">
+            <div class="small-circles" id="orange-small">
                 <h4 class="text-center bottom-circles"><strong>D</strong></h4>
             </div>
-            <div class="small-circles" id="green">
+            <div class="small-circles" id="green-small">
                 <h4 class="text-center bottom-circles"><strong>S</strong></h4>
             </div>
-            <div class="small-circles" id="turquoise">
+            <div class="small-circles" id="turquoise-small">
                 <h4 class="text-center bottom-circles"><strong>H</strong></h4>
             </div>
 
