--- a/codeup-design-bootstrap.html
+++ b/codeup-design-bootstrap.html
@@ -27,7 +27,7 @@
         <h1 class="text-center page-header center-font">codeup design</h1>
     </div>
     <div class="row navbar-xs">
-        <nav class="navbar-xs text-center">
+        <nav class="navbar-xs text-center hidden-sm">
             <ul>
                 <li>SERVICES</li>
                 <li>WORK</li>
@@ -36,16 +36,7 @@
             </ul>
         </nav>
     </div>
-    <div class="row">
-        <nav class="navbar text-center hidden-xs">
-            <ul class="top-menu">
-                <li>SERVICES</li>
-                <li>WORK</li>
-                <li>BLOG</li>
-                <li>CONTACT</li>
-            </ul>
-        </nav>
-    </div>
+
     <div class="row">
         <div class="col-xs-12 col-sm-12">
             <h1 class="text-center body-heading"><strong>VISUAL DESIGN & WEB DEVELOPMENT</strong></h1>
@@ -57,7 +48,7 @@
             <h1 class="text-center body-heading-two"><strong>FROM PARK CITY, UTAH</strong></h1>
         </div>
     </div>
-    <div class="row">
+    <div class="row row-circle">
         <div class="col-xs-6">
         <div id="red-circle">
 
@@ -77,7 +68,7 @@
 
         </div>
     </div>
-    <div class="row">
+    <div class="row row-circle">
         <div class="col-xs-6">
             <div id="green-circle">
                 <div class="circle img-responsive" id="green">
