Fixed circles for sm row. Added css to media query.

--- a/codeup-design-bootstrap.html
+++ b/codeup-design-bootstrap.html
@@ -48,7 +48,33 @@
             <h1 class="text-center body-heading-two"><strong>FROM PARK CITY, UTAH</strong></h1>
         </div>
     </div>
-    <div class="row row-circle">
+
+    <div class="row hidden-xs">
+        <div class="col-sm-12">
+                <div class="circle img-responsive" id="red-circle-sm">
+                    <h2 class="h2-center text-center">DESIGN</h2>
+                </div>
+
+
+                <div class="circle img-responsive" id="orange-circle-sm">
+                    <h2 class="h2-center text-center">DEVELOP</h2>
+                </div>
+
+
+                <div class="circle img-responsive" id="green-circle-sm">
+                    <h2 class="h2-center text-center">SUPPORT</h2>
+
+                </div>
+
+
+                <div class="circle img-responsive" id="turquoise-circle-sm">
+                    <h2 class="h2-center text-center">HOST</h2>
+                </div>
+
+
+        </div>
+    </div>
+    <div class="row hidden-sm hidden-md hidden-lg">
         <div class="col-xs-6">
         <div id="red-circle">
 
@@ -68,7 +94,7 @@
 
         </div>
     </div>
-    <div class="row row-circle">
+    <div class="row hidden-sm hidden-md hidden-lg">
         <div class="col-xs-6">
             <div id="green-circle">
                 <div class="circle img-responsive" id="green">
