--- a/codeup-design-bootstrap.html
+++ b/codeup-design-bootstrap.html
@@ -115,24 +115,147 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-xm-12 col-sm-12">
+        <div class="col-xs-12 col-sm-12" id="col-margin">
         <h2 class="text-center text-center-footer">SELECTED WORK</h2>
     </div>
     </div>
+
     <div class="row">
-        <div class="col-xs-12 col-sm-12">
-            <img src="img/apple-ipad.jpg" class="img-responsive img-border-rounded">
+        <div class="col-sm-6 row-small-pics">
+            <img src="img/apple-ipad.jpg" class="img-responsive img-border-rounded hidden-xs">
+            <div class="row">
+                <div class="col-xs-6">
+                    <h2 class="h2-text-right text-right hidden-xs">
+                        FEATURED PROJECT
+                    </h2>
+
+                </div>
+
+                <div class="col-xs-6 circles-right hidden-xs">
+                    <div class="small-circles" id="red-small">
+                        <h4 class="text-center bottom-circles hidden-xs"><strong>D</strong></h4>
+                    </div>
+                    <div class="small-circles" id="orange-small">
+                        <h4 class="text-center bottom-circles"><strong>D</strong></h4>
+                    </div>
+                    <div class="small-circles" id="green-small">
+                        <h4 class="text-center bottom-circles"><strong>S</strong></h4>
+                    </div>
+                    <div class="small-circles" id="turquoise-small">
+                        <h4 class="text-center bottom-circles"><strong>H</strong></h4>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+
+        <div class="col-sm-6 ">
+            <img src="img/macbook.jpg" class="img-responsive img-border-rounded hidden-xs">
+            <div class="row">
+                <div class="col-xs-6">
+                    <h2 class="h2-text-right text-right hidden-xs">
+                        FEATURED PROJECT
+                    </h2>
+
+                </div>
+
+                <div class="col-xs-6 circles-right hidden-xs">
+                    <div class="small-circles" id="red-small">
+                        <h4 class="text-center bottom-circles"><strong>D</strong></h4>
+                    </div>
+                    <div class="small-circles" id="orange-small">
+                        <h4 class="text-center bottom-circles"><strong>D</strong></h4>
+                    </div>
+                    <div class="small-circles" id="green-small">
+                        <h4 class="text-center bottom-circles"><strong>S</strong></h4>
+                    </div>
+                    <div class="small-circles" id="turquoise-small">
+                        <h4 class="text-center bottom-circles"><strong>H</strong></h4>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-6">
+            <img src="img/man.jpg" class="img-responsive img-border-rounded hidden-xs quick_fix">
+            <div class="row">
+                <div class="col-xs-6">
+                    <h2 class="h2-text-right text-right hidden-xs">
+                        FEATURED PROJECT
+                    </h2>
+
+                </div>
+
+                <div class="col-xs-6 circles-right hidden-xs">
+                    <div class="small-circles" id="red-small">
+                        <h4 class="text-center bottom-circles"><strong>D</strong></h4>
+                    </div>
+                    <div class="small-circles" id="orange-small">
+                        <h4 class="text-center bottom-circles"><strong>D</strong></h4>
+                    </div>
+                    <div class="small-circles" id="green-small">
+                        <h4 class="text-center bottom-circles"><strong>S</strong></h4>
+                    </div>
+                    <div class="small-circles" id="turquoise-small">
+                        <h4 class="text-center bottom-circles"><strong>H</strong></h4>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+
+
+        <div class="col-sm-6">
+            <img src="img/security.jpg" class="img-responsive img-border-rounded hidden-xs quick_fix">
+            <div class="row">
+                <div class="col-xs-6">
+                    <h2 class="h2-text-right text-right hidden-xs">
+                        FEATURED PROJECT
+                    </h2>
+
+                </div>
+
+                <div class="col-xs-6 circles-right hidden-xs">
+                    <div class="small-circles" id="red-small">
+                        <h4 class="text-center bottom-circles"><strong>D</strong></h4>
+                    </div>
+                    <div class="small-circles" id="orange-small">
+                        <h4 class="text-center bottom-circles"><strong>D</strong></h4>
+                    </div>
+                    <div class="small-circles" id="green-small">
+                        <h4 class="text-center bottom-circles"><strong>S</strong></h4>
+                    </div>
+                    <div class="small-circles" id="turquoise-small">
+                        <h4 class="text-center bottom-circles"><strong>H</strong></h4>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+
+    </div>
+
+    <div class="row">
+        <div class="col-xs-6">
+            <img src="img/apple-ipad.jpg" class="img-responsive img-border-rounded hidden-sm">
         </div>
     </div>
     <div class="row">
         <div class="col-xs-6">
-            <h2 class="h2-text-right text-right">
+            <h2 class="h2-text-right text-right hidden-sm">
                 FEATURED PROJECT
             </h2>
 
         </div>
 
-        <div class="col-xs-6 circles-right">
+        <div class="col-xs-6 circles-right hidden-sm">
             <div class="small-circles" id="red-small">
                <h4 class="text-center bottom-circles"><strong>D</strong></h4>
             </div>
