--- a/codeup-design-bootstrap.html
+++ b/codeup-design-bootstrap.html
@@ -12,14 +12,14 @@
 <div class="container">
     <div class="row">
         <div class="col-xs-12 col-sm-12 w-box logo">
-                <nav class="navbar text-center hidden-xs">
-                    <ul class="top-menu">
-                        <li>SERVICES</li>
-                        <li>WORK</li>
-                        <li>BLOG</li>
-                        <li>CONTACT</li>
-                    </ul>
-                </nav>
+            <nav class="navbar text-center hidden-xs">
+                <ul class="top-menu">
+                    <li>SERVICES</li>
+                    <li>WORK</li>
+                    <li>BLOG</li>
+                    <li>CONTACT</li>
+                </ul>
+            </nav>
             <img src="img/logo.png" class="center-block img-responsive logo-image">
         </div>
     </div>
@@ -51,45 +51,46 @@
 
     <div class="row hidden-xs">
         <div class="col-sm-12">
-                <div class="circle img-responsive" id="red-circle-sm">
-                    <h2 class="h2-center text-center">DESIGN</h2>
-                </div>
+            <div class="circle img-responsive" id="red-circle-sm">
+                <h2 class="h2-center text-center">DESIGN</h2>
+            </div>
 
 
-                <div class="circle img-responsive" id="orange-circle-sm">
-                    <h2 class="h2-center text-center">DEVELOP</h2>
-                </div>
+            <div class="circle img-responsive" id="orange-circle-sm">
+                <h2 class="h2-center text-center">DEVELOP</h2>
+            </div>
 
 
-                <div class="circle img-responsive" id="green-circle-sm">
-                    <h2 class="h2-center text-center">SUPPORT</h2>
+            <div class="circle img-responsive" id="green-circle-sm">
+                <h2 class="h2-center text-center">SUPPORT</h2>
 
-                </div>
+            </div>
 
 
-                <div class="circle img-responsive" id="turquoise-circle-sm">
-                    <h2 class="h2-center text-center">HOST</h2>
-                </div>
+            <div class="circle img-responsive" id="turquoise-circle-sm">
+                <h2 class="h2-center text-center">HOST</h2>
+            </div>
 
 
         </div>
     </div>
+
     <div class="row hidden-sm hidden-md hidden-lg">
         <div class="col-xs-6">
-        <div id="red-circle">
+            <div id="red-circle">
 
-            <div class="circle img-responsive down" id="red">
-                <h2 class="h2-center text-center">DESIGN</h2>
-            </div>
+                <div class="circle img-responsive down" id="red">
+                    <h2 class="h2-center text-center">DESIGN</h2>
+                </div>
             </div>
 
         </div>
 
         <div class="col-xs-6">
             <div id="orange-circle">
-            <div class="circle img-responsive" id="orange">
-                <h2 class="h2-center text-center">DEVELOP</h2>
-            </div>
+                <div class="circle img-responsive" id="orange">
+                    <h2 class="h2-center text-center">DEVELOP</h2>
+                </div>
             </div>
 
         </div>
@@ -114,10 +115,12 @@
 
         </div>
     </div>
+    <hr align="center" width="85%" class="line-break">
+
     <div class="row">
         <div class="col-xs-12 col-sm-12" id="col-margin">
-        <h2 class="text-center text-center-footer">SELECTED WORK</h2>
-    </div>
+            <h2 class="text-center text-center-footer">SELECTED WORK</h2>
+        </div>
     </div>
 
     <div class="row">
@@ -243,7 +246,7 @@
     </div>
 
     <div class="row">
-        <div class="col-xs-6">
+        <div class="col-xs-12">
             <img src="img/apple-ipad.jpg" class="img-responsive img-border-rounded hidden-sm">
         </div>
     </div>
@@ -257,7 +260,7 @@
 
         <div class="col-xs-6 circles-right hidden-sm">
             <div class="small-circles" id="red-small">
-               <h4 class="text-center bottom-circles"><strong>D</strong></h4>
+                <h4 class="text-center bottom-circles"><strong>D</strong></h4>
             </div>
             <div class="small-circles" id="orange-small">
                 <h4 class="text-center bottom-circles"><strong>D</strong></h4>
@@ -275,12 +278,12 @@
 </div>
 
 
-    <script
-            src="https://code.jquery.com/jquery-3.2.1.min.js"
-            integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-            crossorigin="anonymous"></script>
+<script
+        src="https://code.jquery.com/jquery-3.2.1.min.js"
+        integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+        crossorigin="anonymous"></script>
 
-    <script src="js/bootstrap.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 
 </body>
 </html>
