--- a/codeup-design-bootstrap.html
+++ b/codeup-design-bootstrap.html
@@ -11,7 +11,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-xs-12 col-sm-12 w-box logo">
+        <div class="col-xs-12 col-sm-12 col-md-12 w-box logo">
             <nav class="navbar text-center hidden-xs">
                 <ul class="top-menu">
                     <li>SERVICES</li>
@@ -27,7 +27,7 @@
         <h1 class="text-center page-header center-font">codeup design</h1>
     </div>
     <div class="row navbar-xs">
-        <nav class="navbar-xs text-center hidden-sm">
+        <nav class="navbar-xs text-center hidden-sm hidden-md hidden-lg">
             <ul>
                 <li>SERVICES</li>
                 <li>WORK</li>
@@ -38,14 +38,14 @@
     </div>
 
     <div class="row">
-        <div class="col-xs-12 col-sm-12">
-            <h1 class="text-center body-heading"><strong>VISUAL DESIGN & WEB DEVELOPMENT</strong></h1>
+        <div class="col-xs-12 col-sm-12 col-md-12">
+            <h1 class="text-center body-heading"><strong class="col-md-12-center text-center">VISUAL DESIGN & WEB DEVELOPMENT</strong></h1>
         </div>
     </div>
 
     <div class="row">
-        <div class="col-xs-12 col-sm-12">
-            <h1 class="text-center body-heading-two"><strong>FROM PARK CITY, UTAH</strong></h1>
+        <div class="col-xs-12 col-sm-12 col-md-12">
+            <h1 class="text-center body-heading-two col-md-12"><strong>FROM PARK CITY, UTAH</strong></h1>
         </div>
     </div>
 
@@ -124,7 +124,7 @@
     </div>
 
     <div class="row">
-        <div class="col-sm-6 row-small-pics">
+        <div class="col-sm-6 col-md-4 row-small-pics">
             <img src="img/apple-ipad.jpg" class="img-responsive img-border-rounded hidden-xs">
             <div class="row">
                 <div class="col-xs-6">
@@ -153,7 +153,7 @@
             </div>
         </div>
 
-        <div class="col-sm-6 ">
+        <div class="col-sm-6 col-md-4">
             <img src="img/macbook.jpg" class="img-responsive img-border-rounded hidden-xs">
             <div class="row">
                 <div class="col-xs-6">
@@ -184,7 +184,7 @@
     </div>
 
     <div class="row">
-        <div class="col-sm-6">
+        <div class="col-sm-6 col-md-4">
             <img src="img/man.jpg" class="img-responsive img-border-rounded hidden-xs quick_fix">
             <div class="row">
                 <div class="col-xs-6">
@@ -214,7 +214,7 @@
         </div>
 
 
-        <div class="col-sm-6">
+        <div class="col-sm-6 col-md-4">
             <img src="img/security.jpg" class="img-responsive img-border-rounded hidden-xs quick_fix">
             <div class="row">
                 <div class="col-xs-6">
@@ -246,19 +246,19 @@
     </div>
 
     <div class="row">
-        <div class="col-xs-12">
+        <div class="col-xs-12 hidden-md">
             <img src="img/apple-ipad.jpg" class="img-responsive img-border-rounded hidden-sm">
         </div>
     </div>
     <div class="row">
         <div class="col-xs-6">
-            <h2 class="h2-text-right text-right hidden-sm">
+            <h2 class="h2-text-right text-right hidden-sm hidden-md">
                 FEATURED PROJECT
             </h2>
 
         </div>
 
-        <div class="col-xs-6 circles-right hidden-sm">
+        <div class="col-xs-6 circles-right hidden-sm hidden-md">
             <div class="small-circles" id="red-small">
                 <h4 class="text-center bottom-circles"><strong>D</strong></h4>
             </div>
