finished responsive xs sm md screens and LOOKING GOOD

--- a/codeup-design-bootstrap.html
+++ b/codeup-design-bootstrap.html
@@ -39,7 +39,8 @@
 
     <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12">
-            <h1 class="text-center body-heading"><strong class="col-md-12-center text-center">VISUAL DESIGN & WEB DEVELOPMENT</strong></h1>
+            <h1 class="text-center body-heading"><strong class="col-md-12-center text-center">VISUAL DESIGN & WEB
+                DEVELOPMENT</strong></h1>
         </div>
     </div>
 
@@ -119,22 +120,23 @@
 
     <div class="row">
         <div class="col-xs-12 col-sm-12" id="col-margin">
-            <h2 class="text-center text-center-footer">SELECTED WORK</h2>
+            <h2 class="text-center text-center-footer md-h2-left">SELECTED WORK</h2>
+            <h2 class="text-left text-center-footer md-h2-left-two hidden-sm hidden-xs">THE LAST</h2>
         </div>
     </div>
 
     <div class="row">
-        <div class="col-sm-6 col-md-4 row-small-pics">
+        <div class="col-sm-6 col-md-4 row-small-pics hidden-md">
             <img src="img/apple-ipad.jpg" class="img-responsive img-border-rounded hidden-xs">
             <div class="row">
                 <div class="col-xs-6">
-                    <h2 class="h2-text-right text-right hidden-xs">
+                    <h2 class="h2-text-right text-right hidden-xs hidden-md">
                         FEATURED PROJECT
                     </h2>
 
                 </div>
 
-                <div class="col-xs-6 circles-right hidden-xs">
+                <div class="col-xs-6 circles-right hidden-xs hidden-md">
                     <div class="small-circles" id="red-small">
                         <h4 class="text-center bottom-circles hidden-xs"><strong>D</strong></h4>
                     </div>
@@ -153,17 +155,18 @@
             </div>
         </div>
 
-        <div class="col-sm-6 col-md-4">
+
+        <div class="col-sm-6 col-md-4 hidden-md">
             <img src="img/macbook.jpg" class="img-responsive img-border-rounded hidden-xs">
             <div class="row">
                 <div class="col-xs-6">
-                    <h2 class="h2-text-right text-right hidden-xs">
+                    <h2 class="h2-text-right text-right hidden-xs hidden-md">
                         FEATURED PROJECT
                     </h2>
 
                 </div>
 
-                <div class="col-xs-6 circles-right hidden-xs">
+                <div class="col-xs-6 circles-right hidden-xs hidden-md">
                     <div class="small-circles" id="red-small">
                         <h4 class="text-center bottom-circles"><strong>D</strong></h4>
                     </div>
@@ -184,17 +187,17 @@
     </div>
 
     <div class="row">
-        <div class="col-sm-6 col-md-4">
+        <div class="col-sm-6 col-md-4 hidden-md">
             <img src="img/man.jpg" class="img-responsive img-border-rounded hidden-xs quick_fix">
             <div class="row">
                 <div class="col-xs-6">
-                    <h2 class="h2-text-right text-right hidden-xs">
+                    <h2 class="h2-text-right text-right hidden-xs hidden-md">
                         FEATURED PROJECT
                     </h2>
 
                 </div>
 
-                <div class="col-xs-6 circles-right hidden-xs">
+                <div class="col-xs-6 circles-right hidden-xs hidden-md">
                     <div class="small-circles" id="red-small">
                         <h4 class="text-center bottom-circles"><strong>D</strong></h4>
                     </div>
@@ -214,17 +217,15 @@
         </div>
 
 
-        <div class="col-sm-6 col-md-4">
+        <div class="col-sm-6 col-md-4 hidden-md">
             <img src="img/security.jpg" class="img-responsive img-border-rounded hidden-xs quick_fix">
             <div class="row">
                 <div class="col-xs-6">
-                    <h2 class="h2-text-right text-right hidden-xs">
-                        FEATURED PROJECT
-                    </h2>
-
+                    <h2 class="h2-text-right text-right hidden-xs hidden-md">
+                        FEATURED PRO
                 </div>
 
-                <div class="col-xs-6 circles-right hidden-xs">
+                <div class="col-xs-6 circles-right hidden-xs hidden-md">
                     <div class="small-circles" id="red-small">
                         <h4 class="text-center bottom-circles"><strong>D</strong></h4>
                     </div>
@@ -235,7 +236,7 @@
                         <h4 class="text-center bottom-circles"><strong>S</strong></h4>
                     </div>
                     <div class="small-circles" id="turquoise-small">
-                        <h4 class="text-center bottom-circles"><strong>H</strong></h4>
+                        <h4 class="text-center bottom-circles"></strong>H</strong></h4>
                     </div>
 
                 </div>
@@ -274,6 +275,154 @@
 
         </div>
 
+    </div>
+    <div class="row">
+        <div class="col-md-12 hidden-xs hidden-sm">
+            <div class="col-md-4 hidden-xs hidden-sm">
+                <img src="img/apple-ipad.jpg" class="img-responsive  img-border-rounded">
+                <div class="row">
+                    <div class="col-md-4 hidden-xs hidden-sm">
+                        <h2 class="h2-text-right">
+                            FEATURED PROJECT
+                        </h2>
+
+                    </div>
+
+                    <div class="col-xs-6 circles-right md-bottom">
+                        <div class="small-circles" id="red-small">
+                            <h4 class="text-center bottom-circles"><strong>D</strong></h4>
+                        </div>
+                        <div class="small-circles" id="orange-small">
+                            <h4 class="text-center bottom-circles"><strong>D</strong></h4>
+                        </div>
+                        <div class="small-circles" id="green-small">
+                            <h4 class="text-center bottom-circles"><strong>S</strong></h4>
+                        </div>
+                        <div class="small-circles" id="turquoise-small">
+                            <h4 class="text-center bottom-circles"><strong>H</strong></h4>
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+
+            <div class="col-md-4 hidden-xs hidden-sm">
+                <img src="img/macbook.jpg" class="img-responsive  img-border-rounded">
+                <div class="row">
+                    <div class="col-md-4">
+                        <h2 class="h2-text-right">
+                            FEATURED PROJECT
+                        </h2>
+
+                    </div>
+
+                    <div class="col-xs-6 circles-right md-bottom">
+                        <div class="small-circles fm" id="red-small">
+                            <h4 class="text-center bottom-circles"><strong>D</strong></h4>
+                        </div>
+                        <div class="small-circles fm" id="orange-small">
+                            <h4 class="text-center bottom-circles"><strong>D</strong></h4>
+                        </div>
+                        <div class="small-circles fn" id="green-small">
+                            <h4 class="text-center bottom-circles"><strong>S</strong></h4>
+                        </div>
+                        <div class="small-circles fm" id="turquoise-small">
+                            <h4 class="text-center bottom-circles"><strong>H</strong></h4>
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+            <div class="col-md-4">
+                <ul>
+                    <li><img src="img/mobile-phone.jpg" class="img-responsive col-md-4 round-li"><h4
+                            class="text-center md-fonts">THE ADMIN AND ABSOLUTE POSITIONING</h4></li>
+                    <li><img src="img/head.jpg" class="img-responsive col-md-4 round-li"><h4
+                            class="text-center md-fonts">NIBBLER AWSOME WEBSITE TESTING</h4></li>
+                    <li><img src="img/ipad.jpg" class="img-responsive col-md-4 round-li"><h4
+                            class="text-center md-fonts">HOW TO GET GOOGLE TO LIKE YOU </h4></li>
+                </ul>
+            </div>
+
+
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12 hidden-xs hidden-sm">
+            <div class="col-md-4 hidden-xs hidden-sm">
+                <img src="img/man.jpg" class="img-responsive  img-border-rounded the-man">
+                <div class="row">
+                    <div class="col-md-4">
+                        <h2 class="h2-text-right ">
+                            FEATURED PROJECT
+                        </h2>
+
+                    </div>
+
+                    <div class="col-xs-6 circles-right md-bottom">
+                        <div class="small-circles" id="red-small">
+                            <h4 class="text-center bottom-circles"><strong>D</strong></h4>
+                        </div>
+                        <div class="small-circles" id="orange-small">
+                            <h4 class="text-center bottom-circles"><strong>D</strong></h4>
+                        </div>
+                        <div class="small-circles" id="green-small">
+                            <h4 class="text-center bottom-circles"><strong>S</strong></h4>
+                        </div>
+                        <div class="small-circles" id="turquoise-small">
+                            <h4 class="text-center bottom-circles"><strong>H</strong></h4>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+            <div class="col-md-4 hidden-xs hidden-sm">
+                <img src="img/security.jpg" class="img-responsive  img-border-rounded">
+                <div class="row">
+                    <div class="col-md-4 hidden-xs hidden-sm">
+                        <h2 class="h2-text-right">
+                            FEATURED PROJECT
+                        </h2>
+
+                    </div>
+
+                    <div class="col-xs-6 circles-right md-bottom">
+                        <div class="small-circles" id="red-small">
+                            <h4 class="text-center bottom-circles"><strong>D</strong></h4>
+                        </div>
+                        <div class="small-circles" id="orange-small">
+                            <h4 class="text-center bottom-circles"><strong>D</strong></h4>
+                        </div>
+                        <div class="small-circles" id="green-small">
+                            <h4 class="text-center bottom-circles"><strong>S</strong></h4>
+                        </div>
+                        <div class="small-circles" id="turquoise-small">
+                            <h4 class="text-center bottom-circles"><strong>H</strong></h4>
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="btn-group" role="group" aria-label="...">
+
+                    <a class="btn btn-primary"><span class="glyphicon glyphicon-eye-open"></span></a>
+                </div>
+                <li class="li-tweet"><h5 class="tweet">LAST TWEET</h5></li>
+
+                </ul>
+                <p class="text-left par-tweet">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A ab
+                    asperiores, consectetur consequuntur deserunt dolorem ea expedita laudantium nesciunt officia omnis
+                    optio quasi quidem, quod reiciendis sapiente vitae voluptas voluptatem.</p>
+            </div>
+
+
+        </div>
     </div>
 </div>
 
